# python_web_HW_05

./: README.md  get_currency.py  main.py  pyproject.toml  server.py
